libmm-qt (1.0.1-1~) UNRELEASED; urgency=medium

  * New upstream release.
  * Update build dependencies.
  * Change package priority.
  * Remove patch: libdir.diff, applied upstream
  * Import ubuntu patch to bump soversion.
  * Import ubuntu symbols file.
  * Bump library package soversion.

 -- Maximiliano Curia <maxy@debian.org>  Sun, 02 Mar 2014 18:47:03 +0100

libmm-qt (0.5.1-1) unstable; urgency=low

  * Initial release. (Closes: #729959)
  * New patch: libdir.diff, honour LIB_DESTINATION.
  * Update symbols for s390x.
  * Update symbols for armhf.

 -- Maximiliano Curia <maxy@debian.org>  Tue, 19 Nov 2013 20:36:54 +0100