@@ -6,10 +6,7 @@
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 %:
-	dh $@ --parallel
+	dh $@ --parallel --dbg-package=libmodemmanagerqt-dbg
 
 override_dh_auto_configure:
 	dh_auto_configure -- -DLIB_DESTINATION=/usr/lib/$(DEB_HOST_MULTIARCH)
-
-override_dh_strip:
-	dh_strip --dbg-package=libmodemmanagerqt-dbg
