@@ -7,6 +7,7 @@ libmm-qt (1.0.1-1~) UNRELEASED; urgency=medium
   * Import ubuntu patch to bump soversion.
   * Import ubuntu symbols file.
   * Bump library package soversion.
+  * Aesthetic change, further reduce rules file.
 
  -- Maximiliano Curia <maxy@debian.org>  Sun, 02 Mar 2014 18:47:03 +0100
 
